# stm32f7xx-hal

./: Cargo.toml
.cargo/: config
examples/: i2c.rs  usb_midi.rs  usb_midi_hs.rs  usb_serial.rs  usb_serial_hs.rs
src/: otg_hs.rs  rtc.rs
