[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7xx family of microcontrollers"
documentation = "https://docs.rs/stm32f7xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32f7xx", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f7xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f7xx-hal"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["stm32f746", "rt"]

[dependencies]
as-slice = "0.1.4"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
nb = "1.0.0"
rtcc = "0.2"
stm32f7 = "0.12.1"
micromath = "1.1.0"
synopsys-usb-otg = { version = "0.2.3", features = ["cortex-m"], optional = true }
stm32-fmc = { version = "0.2.0", features = ["sdram"], optional = true }
usbd-midi = "0.2.0"

[dependencies.bare-metal]
version = "1.0.0"
# features = ["const-fn"] # remove later in PR

[dependencies.cast]
default-features = false
version = "0.2.3"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
embedded-graphics = "0.6.2"
usb-device = "0.2.7"
usbd-serial = "0.1.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

[features]
device-selected = []
ltdc = []
fmc = ["stm32-fmc"]
rt = ["stm32f7/rt"]
stm32f722 = ["stm32f7/stm32f7x2", "device-selected"]
stm32f723 = ["stm32f7/stm32f7x3", "device-selected"]
stm32f730 = ["stm32f7/stm32f730", "device-selected"]
stm32f732 = ["stm32f7/stm32f7x2", "device-selected"]
stm32f733 = ["stm32f7/stm32f7x3", "device-selected"]
stm32f745 = ["stm32f7/stm32f745", "device-selected", "fmc"]
stm32f746 = ["stm32f7/stm32f7x6", "device-selected", "ltdc", "fmc"]
stm32f756 = ["stm32f7/stm32f7x6", "device-selected", "ltdc", "fmc"]
stm32f765 = ["stm32f7/stm32f765", "device-selected", "fmc"]
stm32f767 = ["stm32f7/stm32f7x7", "device-selected", "ltdc", "fmc"]
stm32f769 = ["stm32f7/stm32f7x9", "device-selected", "ltdc", "fmc"]
stm32f777 = ["stm32f7/stm32f7x7", "device-selected", "ltdc", "fmc"]
stm32f778 = ["stm32f7/stm32f7x9", "device-selected", "ltdc", "fmc"]
stm32f779 = ["stm32f7/stm32f7x9", "device-selected", "ltdc", "fmc"]

usb_fs = ["synopsys-usb-otg", "synopsys-usb-otg/fs"]

usb_hs = ["synopsys-usb-otg", "synopsys-usb-otg/hs"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "blinky_delay"
required-features = ["stm32f746", "rt"]

[[example]]
name = "blinky"
required-features = ["stm32f746", "rt"]

[[example]]
name = "flash"
required-features = ["stm32f746", "rt"]

[[example]]
name = "fmc"
required-features = ["stm32f746", "rt", "fmc"]

[[example]]
name = "hello"
required-features = ["stm32f746", "rt"]

[[example]]
name = "serial_delay"
required-features = ["stm32f746", "rt"]

[[example]]
name = "serial_echo"
required-features = ["stm32f746", "rt"]

[[example]]
name = "timer"
required-features = ["stm32f746", "rt"]

[[example]]
name = "stm32f7disco-screen"
required-features = ["stm32f746", "rt"]

[[example]]
name = "exti_button"
required-features = ["stm32f767", "rt"]

[[example]]
name = "usb_serial"
required-features = ["stm32f723", "rt"]

[[example]]
name = "usb_serial_hs"
required-features = ["stm32f723", "rt", "usb_hs"]

[[example]]
name = "usb_midi"
required-features = ["stm32f723", "rt", "usb_fs"]